--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "font-awesome": "~4.4.0",
     "font-mfizz": "~2.0.1",
     "simptip": "~1.0.4",
-    "smooth-scroll.js": "~7.1.1"
+    "smooth-scroll.js": "~7.1.1",
+    "animate.css": "~3.4.0"
   }
 }
